@@ -232,5 +232,6 @@ public interface CommonParams {
   public static final String PATH = "path";
 
   public static final String NAME = "name";
+  public static final String VALUE_LONG = "val";
 }
 
